# PureSignal

./: .gitignore  README.md  pyproject.toml  requirements.txt
PureSignal/: config.py  enroll.py  main.py
PureSignal/audio/: capture.py  features.py  resampler.py  vad.py
PureSignal/llm/: ultravox_client.py
PureSignal/speaker/: encoder.py  enrollment.py  policy.py  tracker.py
tests/: conftest.py  test_audio_pipeline.py  test_speaker_pipeline.py
