[tool.poetry]
name = "PureSignal"
version = "0.1.0"
description = "Real-time speaker-ID pipeline for Apple Silicon. Captures mic audio, identifies enrolled speakers via voice embeddings, and streams approved speech to the Ultravox AI voice API."
authors = ["Aryan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
# Main Python version
python = ">=3.10,<3.12"
# Audio capture and playback
sounddevice = ">=0.4.6"
# WebSocket client for Fixie.ai Ultravox
websockets = ">=12.0"
# Signal processing — resampling
scipy = ">=1.11.0"
# Numerical computing
numpy = ">=1.26.0"
# Deep learning — MPS backend for Apple Silicon
torch = ">=2.2.0,<2.4.0"
# Speaker embedding model + inference wrapper
pyannote.audio = ">=3.1.0,<4.0.0"
# HuggingFace model loading
transformers = ">=4.40.0"
huggingface-hub = ">=0.22.0"
# Environment variable loading from .env files
python-dotenv = ">=1.0.0"
# Add main dependencies from requirements.txt below

[tool.poetry.dev-dependencies]
ruff = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "F", "I"]
per-file-ignores = {}